--- a/src/app/shared/components/catalogo-comun/catalogo-comun/catalogo-comun.component.html
+++ b/src/app/shared/components/catalogo-comun/catalogo-comun/catalogo-comun.component.html
@@ -53,7 +53,7 @@
           <div class="flex gap-4 items-center">
             <div class="w-16 h-16 bg-gray-100 rounded-lg overflow-hidden shrink-0">
                <!-- Usa placeholder si no hay imagen -->
-               <img src="assets/images/placeholder.png" class="w-full h-full object-cover group-hover:scale-110 transition-transform">
+               <img src="assets/images/pelota.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform">
             </div>
             <div>
               <p class="text-sm font-bold text-gray-900 leading-tight group-hover:text-emerald-600 transition-colors line-clamp-2">Pack Esencial Hogar</p>
